--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "homepage": "https://latifaabdullayeva.github.io/todo-list-js-app/",
+  "homepage": "https://latifaabdullayeva.github.io/todo-list-js-app",
   "dependencies": {
     "gh-pages": "^3.1.0"
   }
